Changelog for Writer2LaTeX version 1.0 -> 1.2

---------- version 1.1.9 ----------

[w2x] The file containing the cover image in EPUB export is now created with a body margin of zero 

[w2l] The StarMath converter now leaves out the \text command if the argument is a plain number 

[w2l] Properly detect and ignore empty formulas (avoiding any occurrences of $ $ in the document)

[w2l] The StarMath converter now avoids redundant braces

[w2l] The StarMath converter is now a little more tolerant on errors like missing operands for a binary operator
  (import from MS Word may create such errors)

[w2x] EPUB change: Missing heading levels are now treated more consistent in the toc. E.g. the sequence of heading levels
  2-2-1-3-3-2 is now exported as toc levels 1-1-1-2-2-2 (before it was 1-2-1-2-3-2)

[w2l] Bugfix: Ignore headings inside footnotes (export as normal paragraph). Footnotes should not contain headings, and this
  change avoids an infinite loop if such a footnote is within a table.

[w2l] Fixed bugs on the "Text and Math" options page (controls were not updated correctly leading to erratic behavior)

[w2l] Added support for the font "Greek"

---------- version 1.1.8 ----------

[all] Added support for JPEG images with EXIF data

[w2x] Implemented the option separate_stylesheet to separate the style sheet from the XHTML files (has no effect on EPUB export)

[all] Added Catalan translation from Martí Ruiz-Altaba

[all] Image files are now extracted with proper file extension, even if the ODF manifest contains no media type

[all] Added support for images in EMF format (Enhanced Windows Meta Files)

[w2l] Bugfix: No longer decodes URLs in links (hyperref.sty has no problem with sequences like %E4)

[w2x] EPUB bugfix: The meta data editor now shows the correct default creator (not the original creator)

[w2x] New option cover_image with values true and false (default). In EPUB export, if this option is set the true the very